Android: update clang compiler detection

This patch updates the clang compiler detection to
allow Clang version 2010 and above to use C++26
macros.

This will allow Qt Android x86_64 build on dev to compile.

Fixes: QTBUG-136968
Change-Id: I0988169e6e10357f0e210c3911843e6d04a43c0d
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>
(cherry picked from commit f9af480ed2b10a1fd6b692befbebcbecb9e1f429)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>