src/corelib/global/qcompilerdetection.h
@@ -1035,7 +1035,7 @@
 // if one isn't also using C++26,
 // https://github.com/llvm/llvm-project/issues/109311
 #  if defined(__cpp_deleted_function) && __cpp_deleted_function >= 202403L \
-    && (!defined(Q_CC_CLANG_ONLY) || Q_CC_CLANG_ONLY >= 2000 || __cplusplus > 202302L) // C++26
+    && (!defined(Q_CC_CLANG_ONLY) || Q_CC_CLANG_ONLY >= 2010 || __cplusplus > 202302L) // C++26
 #    define Q_DECL_EQ_DELETE_X(reason) = delete(reason)
 #  else
 #    define Q_DECL_EQ_DELETE_X(reason) = delete
